@@ -36,3 +36,6 @@ remove = PkgConfig
 
 [Author::Plicease::Upload]
 cpan = 1
+
+[=inc::InstallerBeta]
+
