@@ -12,6 +12,7 @@ pod_spelling_system:
     - dlls
     - ffi
     - Autoconf
+    - CMake
 
 pod_coverage:
   skip: 0
@@ -19,7 +20,7 @@ pod_coverage:
   # for either Class or method.
   private:
     - Alien::Install.*
-    - Alien::[A-Za-z]+::Installer#(versions_available|versions_process|versions_sort|versions_url|fetch_url)
+    - Alien::[A-Za-z]+::Installer#(versions_available|versions_process|versions_sort|versions_url|fetch_url|build_install_cflags|build_install_libs|build_install_dlls)
 
 unused_vars:
   skip: 0
